# silk-codec

./: .gitignore  CMakeLists.txt  README.md
test/: Decoder.c  Encoder.c  signalCompare.c
